fix conflictRelated field in Data Table add language selector to admin page collapse items in Data Table view

--- a/AlertsMap/static/css/style.css
+++ b/AlertsMap/static/css/style.css
@@ -329,6 +329,11 @@ aside {
   box-sizing: content-box;
   outline: 2px solid rgba(30, 30, 30, 0.5);
 }
+
+.data-table tbody .data-table-spoiler > span {
+  display: block;
+}
+
 .data-table-opened #mapLegend {
   display: none;
 }
